# take-home-exercises

./: .gitignore  README.md
data-science/: README.md
data-science/data-engineer/: README.md  pyproject.toml
data-science/data-scientist/: README.md  pyproject.toml
data-science/data-scientist/medical-appointment-no-shows/: README.md  notebook.ipynb  notebook_helpers.py  pyproject.toml
data-science/data-scientist/predict-future-events/: README.md  notebook.ipynb
engineering/: README.md
engineering/frontend/: README.md
engineering/frontend/data/: mock.json
engineering/frontend/mockup/: bookshelf.sketch
